[package]
name = "libecvrf-k256"
version = "1.1.3"
description = "A fork of libecvrf use k256 implementation"
authors = []
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
keywords = ["vrf", "ecvrf", "libecvrf", "randomness", "rng"]
categories = ["no-std", "cryptography", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
fork_from = "libecvrf"
fork_from_repository = "https://github.com/orochi-network/orochimaru"

[lib]
name = "libecvrf_k256"
path = "src/lib.rs"

[dependencies]
tiny-keccak = { version = "2.0.2", default-features = false, features = [
  "keccak",
] }
k256 = { version = "0.13", features = ["arithmetic", "serde"] }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["no_std"]
std = []
no_std = []
